[gd_scene load_steps=5 format=2]

[ext_resource path="res://Projectiles/Explosive.gd" type="Script" id=1]
[ext_resource path="res://Projectiles/FireBall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/PNG/Default (64px)/Characters/red_character.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 135.033

[node name="Explosive" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Explosion" type="Area2D" parent="." index="3"]
visible = false
collision_layer = 3
collision_mask = 3

[node name="ExplosionSprite" type="Sprite" parent="Explosion" index="0"]
scale = Vector2( 7, 7 )
texture = ExtResource( 4 )

[node name="ExplosionArea" type="CollisionShape2D" parent="Explosion" index="1"]
shape = SubResource( 1 )

[node name="ExplosionTimer" type="Timer" parent="." index="4"]

[connection signal="body_shape_entered" from="." to="." method="_on_Explosive_body_shape_entered"]
[connection signal="body_entered" from="Explosion" to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
